--- a/_config.yml
+++ b/_config.yml
@@ -6,17 +6,17 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: ACMI Audio Guide
+title: Group of Seven Exhibit Audio Guide
 email: your-email@example.com
 description: > # this means to ignore newlines until "baseurl:"
-  A web-based audio guide theme for Jekyll.
+  A web-based audio guide for the exhibit of Nova Scotia-themed Group of Seven artwork reproductions in Bedford's Scott Manor House in summer 2020.
 baseurl: "" # the subpath of your site, e.g. /blog
 audio_path: "/audio/"
 episode_hero_path: "/assets/img/stops/"
-url: "http://www.example.com" # the base hostname & protocol for your site
+url: "http://scottmanorhouse.github.io" # the base hostname & protocol for your site
 logo: "/assets/img/logo/audio-guide.png"
-twitter_username: acmilabs
-github_username:  acmilabs
+twitter_username: ScottManorHouse
+github_username:  nodrogluap
 menu_heading: "Select another stop"
 index_page_text: "Select an audio guide stop to begin."
 headphones_icon_color: "/assets/img/icons/headphones-dark.png"
